# Heuristic-Adaptive-Data-Extrapolation-System-HADES

./: .coverage  .env  .gitignore  Dockerfile.arangodb  Dockerfile.backend  Dockerfile.frontend  HADES_Architecture_Overview.md  HADES_Development_phases.md  HADES_Embedded_Model_Implementation_Plan.md  HADES_Implementation_Specification.md  HADES_MCP_Server.py  ProjectOlympus_BuildRequirements.md  README.md  README_VERSIONING.md  auth.db  conftest.py  coverage.xml  docker-compose.test.yml  docker-compose.yaml  docker-compose.yml  example.env  find_arango_issue.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  server.js  setup.py  test_HADES_MCP_Server.py  todo.md
cline_docs/: activeContext.md  productContext.md  progress.md  systemPatterns.md  techContext.md
docs/: ECL_User_Memory_Implementation.md  HADES_Architecture_Overview.md  HADES_Implementation_Specification.md  HADES_Memory_Enhanced_PathRAG_Implementation.md  HADES_PathRAG_Implementation.md  api_mcp_distinction.md  arango_docs_summary.md  arango_integration.md  authentication_setup.md  documentation_ingestion.md  password_rotation.md  postgresql_migration.md  querying_arango_docs.md  windsurf_integration.md
hades.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
hades/auth/: pg_auth.py
hades/core/: __init__.py  config.py  exceptions.py  models.py
hades/server/: __init__.py  connection.py  handlers.py  server.py
scripts/: create_production_keys.py  reset_arango_root.sh  reset_databases.sh  rotate_hades_password.sh  setup_arango_db.js  setup_arango_hades_user.sh  setup_arango_user.sh  setup_hades_databases.sh  setup_test_db.sh  test_mcp_client.py
src/: App.tsx  hades_ingest.py  index.css  ingest_docs.py  ingest_to_hades.py  markdownify_site.py  markdownify_webpage.py  test_arango_docs.py  test_client.py  test_discovery.py  test_stdio_mcp.py  test_windsurf_mcp.py
tests/: arango_test_env.py  conftest.py  create_tables.sql  manual_pg_setup.md  patch_auth.py  pg_setup_instructions.md  pg_setup_with_sudo.sh  pg_test_env.py  run_pg_tests.sh  run_tests.sh  setup_hades_db.py  setup_hades_db.sh  setup_hades_db.sql  setup_hades_db_fix.sh  setup_hades_db_ubuntu.sh  setup_hades_user.sh  setup_peer_auth_db.sh  setup_pg_db.sh  setup_pg_test_db.py  setup_test_databases.py  test_config.py  test_pg_auth.py  verify_pg_connection.py
(+87 files in other folders)
